[package]
description = "Rake based keyphrase extraction"
edition = "2021"
homepage = "https://github.com/jjoeldaniel/mapwords.rs"
keywords = ["keyphrase", "keyphrases", "keywords", "extraction", "nlp"]
license = "WTFPL"
name = "keyphrases"
repository = "https://github.com/jjoeldaniel/mapwords.rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
