[package]
description = "Rapid Automatic Keyword Extraction (RAKE) implementation in Rust"
edition = "2021"
homepage = "https://github.com/jjoeldaniel/keyphrases.rs"
keywords = ["keyphrase", "keyphrases", "keywords", "extraction", "nlp", "rake"]
license = "WTFPL"
name = "keyphrases"
repository = "https://github.com/jjoeldaniel/keyphrases.rs"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
