[package]
description = "Rapid Automatic Keyword Extraction (RAKE) implementation in Rust"
documentation = "https://docs.rs/keyphrases/"
edition = "2021"
keywords = ["keyphrases", "keywords", "extraction", "nlp", "rake"]
license = "WTFPL"
name = "keyphrases"
readme = "README.md"
repository = "https://github.com/jjoeldaniel/keyphrases.rs"
version = "0.1.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
